# Upload using flit
# Ref: https://pypi.org/project/flit/
# Metadata ref: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pycaz"
authors = [{name = "Jamal Khan", email = "4151009+jamal919@users.noreply.github.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
requires-python = ">=3.9"
keywords = ["model", "analysis", "schism", "cyclone"]
dependencies = [
    "numpy",            # numerical computations
    "scipy",            # scientific algorithms
    "matplotlib",       # plotting stuff
    "cmocean",          # nice colorbar
    "pandas",           # tabular data analysis with R-like dataframe
    "openpyxl",         # reading xlsx dataset
    "geopandas",        # pandas for geographic
    "cartopy",          # map plotting for matplotlib
    "shapely",          # geometric shape handling
    "pyproj",           # geographic projection library
    "xarray",           # pandas-like interface to n-dimentional data
    "netcdf4",          # handling netcdf4 dataset
    "rasterio",         # handling raster dataset
    "rioxarray",        # rasterio wrapper for xarray dataset
    "utide",            # tidal analysis
    "tqdm",             # progressbar
    "ipykernel",        # useful for using ipython
    "notebook",         # jupyter notebook
    "ipywidgets",       # widgets for jupyter notebook
    "requests",         # downloading stuffs
    "beautifulsoup4",   # parsing webpages
    "lxml",             # processing xml and html
    "hydromt",          # model/data handling platform from Deltares
    "hydromt_sfincs"    # sfincs plugin for hydromt
]

[project.urls]
Home = "https://jamal919.github.io/softwares/pycaz"
Repo = "https://github.com/jamal919/pycaz"

[tool.flit.sdist]
exclude = ["docs", "build", "notebooks", "scripts", "environment*.yml", ".gitignore"]